# wasdon

./: Cargo.toml  README.md
crates/parser-implementer-macro/: Cargo.toml
docs/: index.md
fuzz/: Cargo.toml
src/: lib.rs
src/core/: mangle.rs  mod.rs  wasm2uasm.rs
src/parser/: mod.rs
src/udon/: mod.rs
src/udon/uasm/: codegen.rs  data.rs  mod.rs
src/wasm/: interpret.rs  mod.rs  parser.rs
uasm/: linear_memory.uasm
wasm/: linear_memory.wat  no_std.wat
