[package]
name = "wasdon"
version = "0.1.0"
edition.workspace = true
authors = ["Satsuki Akiba <anosatsuk124@gmail.com>"]
description = """
Yet another WASM-compatible layer for UdonVM (to run WASM/WASI binary on VRChat).
"""
license = "Apache-2.0 WITH LLVM-exception"
default-run = "wasdon"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
edition = '2021'

[[bin]]
name = "wasdon"
path = "src/bin/translator/main.rs"

[workspace]
resolver = "2"
members = [
  "fuzz",
]

[workspace.dependencies]
anyhow = { version = "1.0.71", default-features = false }
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"
wasmparser = { package = "wasmparser-nostd", version = "0.100.1", default-features = false }
log = "0.4.17"
env_logger = "0.10.0"
hashbrown = "0.13.2"

[features]
default = []
std = ["wasmparser/std", "dep:env_logger"]

[dependencies]
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
wasmparser = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true, optional = true }
hashbrown = { workspace = true }

