[package]
name = "wasdon-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wasdon]
path = ".."

[[bin]]
name = "translating_wasm2udon_validation"
path = "fuzz_targets/translating_wasm2udon_validation.rs"
test = false
doc = false
